src/main/java/com/example/areyoup/errors/errorcode/CommonErrorCode.java
package com.example.areyoup.errors.errorcode;

import lombok.AllArgsConstructor;
import lombok.Getter;
import org.springframework.http.HttpStatus;

@Getter
@AllArgsConstructor
public enum CommonErrorCode implements ErrorCode{
    INVALID_TOKEN(HttpStatus.NOT_FOUND, "Token이 유효하지 않습니다."),
    ACCESS_DENIED(HttpStatus.FORBIDDEN, "접근 권한이 없습니다.");

    private final HttpStatus httpStatus;
    private final String message;
}
